--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-runtime": "^6.26.0",
+    "node-sass": "^4.5.3",
     "qs": "^6.5.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "vuejs-paginate": "^1.2.0",
