--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.16.2",
     "babel-runtime": "^6.26.0",
     "node-sass": "^4.5.3",
+    "nprogress": "^0.2.0",
     "qs": "^6.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
