--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "vue": "^2.4.2",
+    "vue-awesome-swiper": "^3.0.6",
     "vue-router": "^2.7.0",
     "vue2-toast": "^1.3.0",
     "vuejs-paginate": "^1.2.0",
